[gd_scene load_steps=3 format=3 uid="uid://c8q6v0j6y5n3q"]

[ext_resource type="Script" path="res://scripts/ui/combat_ui.gd" id="1_2k4m3"]
[ext_resource type="Texture2D" uid="uid://c8q6v0j6y5n3q" path="res://assets/sprites/ui/combat_background.png" id="2_3k4m3"]

[node name="CombatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2k4m3")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3k4m3")
expand_mode = 1
stretch_mode = 6

[node name="Combatants" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayerTeam" type="VBoxContainer" parent="Combatants"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyTeam" type="VBoxContainer" parent="Combatants"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ActionPanel/MarginContainer"]
layout_mode = 2

[node name="CurrentTurn" type="Label" parent="ActionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Current Turn: Player"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ActionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionButtons" type="GridContainer" parent="ActionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="AttackButton" type="Button" parent="ActionPanel/MarginContainer/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Attack"

[node name="SkillButton" type="Button" parent="ActionPanel/MarginContainer/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Skill"

[node name="ItemButton" type="Button" parent="ActionPanel/MarginContainer/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Item"

[node name="DefendButton" type="Button" parent="ActionPanel/MarginContainer/VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Defend"

[node name="SkillPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="SkillPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SkillPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="SkillPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Skills"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SkillPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SkillList" type="VBoxContainer" parent="SkillPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="SkillPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="ItemPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="ItemPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ItemPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="ItemPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Items"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ItemPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemList" type="VBoxContainer" parent="ItemPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="ItemPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="TargetPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="TargetPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TargetPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="TargetPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Select Target"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TargetPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TargetList" type="VBoxContainer" parent="TargetPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="TargetPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back" 